fix: text wrap

--- a/src/public/index.css
+++ b/src/public/index.css
@@ -6,3 +6,7 @@ iframe {
 div.MuiBox-root > div.MuiBox-root > div.MuiStack-root.watermark {
     display: none;
 }
+
+div.MuiStack-root.message-content .markdown-body {
+    overflow-wrap: break-word !important;
+}
